--- a/html/balls/badminton.html
+++ b/html/balls/badminton.html
@@ -1953,7 +1953,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
@@ -2025,7 +2025,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
