--- a/html/balls/iceball.html
+++ b/html/balls/iceball.html
@@ -1956,7 +1956,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
@@ -2028,7 +2028,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
