--- a/html/balls/soccer.html
+++ b/html/balls/soccer.html
@@ -1858,7 +1858,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
@@ -1930,7 +1930,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName"></span>英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
