--- a/html/balls/race.html
+++ b/html/balls/race.html
@@ -1694,7 +1694,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
@@ -1766,7 +1766,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
