--- a/html/balls/tennis.html
+++ b/html/balls/tennis.html
@@ -1810,7 +1810,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
@@ -1882,7 +1882,7 @@
                                 </span>
                             </td>
                             <td>
-                                英格蘭-超級聯賽
+                                <span class="leagendName">英格蘭-超級聯賽</span>
                                 <br>
                                 烏法足球俱樂部青年&nbsp;
                                 <span class="wd_red">2+50</span>&nbsp;
