--- a/html/myself/joinus.html
+++ b/html/myself/joinus.html
@@ -8,7 +8,7 @@
     <title>加入我們</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../../js/javascript.js"></script>
-    <link rel="stylesheet" href="../../css/style.css">
+    <link class="elseStyle" rel="stylesheet" href="../../css_2/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
