--- a/html/balls/tableball.html
+++ b/html/balls/tableball.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
+    <meta name="viewport" content="width=device-width, initial-scale=0.25">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>乒乓球</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../../js/javascript.js"></script>
-    <link class="elseStyle" rel="stylesheet" href="../../css_2/style.css">
+    <link class="elseStyle" rel="stylesheet" href="../../css_4/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
