--- a/html/leftbtn/deposit.html
+++ b/html/leftbtn/deposit.html
@@ -235,6 +235,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
+                <button></button>
             </div>
             <div class="marqueeBox">
                 <i class="fas fa-volume-up"></i>
