--- a/html/myself/message.html
+++ b/html/myself/message.html
@@ -218,6 +218,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
+                <button></button>
             </div>
             <div class="marqueeBox">
                 <i class="fas fa-volume-up"></i>
