--- a/html/myself/wallet.html
+++ b/html/myself/wallet.html
@@ -310,6 +310,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
+                <button></button>
             </div>
             <div class="marqueeBox">
                 <i class="fas fa-volume-up"></i>
