--- a/html/balls/result.html
+++ b/html/balls/result.html
@@ -456,7 +456,7 @@
                 <!--遊戲版面-->
                 <div class="mainBox display">
                     <!--足球-->
-                    <table class="playBoard tType1_result soccer">
+                    <table class="playBoard tType1_result soccer result_page">
                         <tr>
                             <th colspan="6" class="tLeft">
                                 足球
@@ -549,7 +549,7 @@
                         </tr>
                     </table>
                     <!--棒球-->
-                    <table class="playBoard tType2_result baseball">
+                    <table class="playBoard tType2_result baseball result_page">
                         <tr>
                             <th colspan="14" class="tLeft">
                                 棒球
@@ -690,7 +690,7 @@
                         </tr>
                     </table>
                     <!--籃球-->
-                    <table class="playBoard tType3_result basketball">
+                    <table class="playBoard tType3_result basketball result_page">
                         <tr>
                             <th colspan="9" class="tLeft">
                                 籃球
@@ -774,7 +774,7 @@
                         </tr>
                     </table>
                     <!--賽馬賽狗-->
-                    <table class="playBoard tType4_result race">
+                    <table class="playBoard tType4_result race result_page">
                         <tr>
                             <th colspan="9" class="tLeft">
                                 賽馬賽狗
@@ -942,7 +942,7 @@
                         </tr>
                     </table>
                     <!--電競-->
-                    <table class="playBoard tType5_lol_result esp">
+                    <table class="playBoard tType5_lol_result esp result_page">
                         <tr>
                             <th colspan="18" class="tLeft">
                                 電競-英雄聯盟
@@ -1106,7 +1106,7 @@
                             </td>
                         </tr>
                     </table>
-                    <table class="playBoard tType5_dota_result esp">
+                    <table class="playBoard tType5_dota_result esp result_page">
                         <tr>
                             <th colspan="17" class="tLeft">
                                 電競-DOTA
@@ -1261,7 +1261,7 @@
                             </td>
                         </tr>
                     </table>
-                    <table class="playBoard tType5_cs_result esp">
+                    <table class="playBoard tType5_cs_result esp result_page">
                         <tr>
                             <th colspan="14" class="tLeft">
                                 電競-絕對武力:全球攻勢
@@ -1390,7 +1390,7 @@
                         </tr>
                     </table>
                     <!--股票指數-->
-                    <table class="playBoard tType6_result stock">
+                    <table class="playBoard tType6_result stock result_page">
                         <tr>
                             <th colspan="6" class="tLeft">
                                 股票指數
@@ -1429,7 +1429,7 @@
                         </tr>
                     </table>
                     <!--彩球-->
-                    <table class="playBoard tType7_bingo_result lottery">
+                    <table class="playBoard tType7_bingo_result lottery result_page">
                         <tr>
                             <th colspan="10" class="tLeft">
                                 彩球-賓果
@@ -1516,7 +1516,7 @@
                             <td>07</td>
                         </tr>
                     </table>
-                    <table class="playBoard tType7_lottery_result lottery">
+                    <table class="playBoard tType7_lottery_result lottery result_page">
                         <tr>
                             <th colspan="15" class="tLeft">
                                 彩球-大樂透
@@ -1633,7 +1633,7 @@
                         </tr>
                     </table>
                     <!--冰球-->
-                    <table class="playBoard tType3_result iceball">
+                    <table class="playBoard tType3_result iceball result_page">
                         <tr>
                             <th colspan="9" class="tLeft">
                                 冰球
@@ -1717,7 +1717,7 @@
                         </tr>
                     </table>
                     <!--網球-->
-                    <table class="playBoard tType8_result tennis">
+                    <table class="playBoard tType8_result tennis result_page">
                         <tr>
                             <th colspan="11" class="tLeft">
                                 網球
@@ -1819,7 +1819,7 @@
                         </tr>
                     </table>
                     <!--斯諾克-->
-                    <table class="playBoard tType9_result snooker">
+                    <table class="playBoard tType9_result snooker result_page">
                         <tr>
                             <th colspan="5" class="tLeft">
                                 斯諾克
@@ -1861,7 +1861,7 @@
                         </tr>
                     </table>
                     <!--排球-->
-                    <table class="playBoard tType10_result vball">
+                    <table class="playBoard tType10_result vball result_page">
                         <tr>
                             <th colspan="12" class="tLeft">
                                 排球
@@ -1972,7 +1972,7 @@
                         </tr>
                     </table>
                     <!--賽車-->
-                    <table class="playBoard tType11_result racecar">
+                    <table class="playBoard tType11_result racecar result_page">
                         <tr>
                             <th colspan="12" class="tLeft">
                                 賽車
@@ -2161,7 +2161,7 @@
                         </tr>
                     </table>
                     <!--羽毛球-->
-                    <table class="playBoard tType12_result badminton">
+                    <table class="playBoard tType12_result badminton result_page">
                         <tr>
                             <th colspan="12" class="tLeft">
                                 羽毛球
@@ -2221,7 +2221,7 @@
                         </tr>
                     </table>
                     <!--沙灘足球-->
-                    <table class="playBoard tType1_result beachball">
+                    <table class="playBoard tType1_result beachball result_page">
                         <tr>
                             <th colspan="6" class="tLeft">
                                 沙灘足球
@@ -2314,7 +2314,7 @@
                         </tr>
                     </table>
                     <!--美式足球-->
-                    <table class="playBoard tType3_result football">
+                    <table class="playBoard tType3_result football result_page">
                         <tr>
                             <th colspan="9" class="tLeft">
                                 美式足球
@@ -2398,7 +2398,7 @@
                         </tr>
                     </table>
                     <!--乒乓球-->
-                    <table class="playBoard tType10_result tableball">
+                    <table class="playBoard tType10_result tableball result_page">
                         <tr>
                             <th colspan="12" class="tLeft">
                                 乒乓球
