--- a/index.html
+++ b/index.html
@@ -486,7 +486,7 @@
                 <!--遊戲版面-->
                 <div class="mainBox display">
                     <!--足球-->
-                    <table class="playBoard tType1_index soccer">
+                    <table class="playBoard tType1_index soccer index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="11">足球-英格蘭-超級聯賽</th>
@@ -629,7 +629,7 @@
                         </tr>
                     </table>
                     <!--棒球-->
-                    <table class="playBoard tType2_index baseball">
+                    <table class="playBoard tType2_index baseball index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="20">棒球-日本-NPB職業棒球聯賽</th>
@@ -998,7 +998,7 @@
                         </tr>
                     </table>
                     <!--籃球-->
-                    <table class="playBoard tType3_index basketball">
+                    <table class="playBoard tType3_index basketball index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="11">籃球-台灣-SBL超級籃球聯賽</th>
@@ -1192,7 +1192,7 @@
                         </tr>
                     </table>
                     <!--賽馬賽狗-->
-                    <table class="playBoard tType4_index race">
+                    <table class="playBoard tType4_index race index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="10">賽馬賽狗-香港蝴蝶花讓賽</th>
@@ -1297,7 +1297,7 @@
                         </tr>
                     </table>
                     <!--電競LOL-->
-                    <table class="playBoard tType5_lol_index esp">
+                    <table class="playBoard tType5_lol_index esp index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="19">電子競技-英雄聯盟-中國職業聯賽</th>
@@ -1563,7 +1563,7 @@
                         </tr>
                     </table>
                     <!--電競DOTA-->
-                    <table class="playBoard tType5_dota_index esp">
+                    <table class="playBoard tType5_dota_index esp index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="18">電子競技-刀塔2-FDC職業錦標賽</th>
@@ -1816,7 +1816,7 @@
                         </tr>
                     </table>
                     <!--電競CS-->
-                    <table class="playBoard tType5_cs_index esp">
+                    <table class="playBoard tType5_cs_index esp index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="15">電子競技-絕對武力:全球攻勢-ESEA</th>
@@ -2028,7 +2028,7 @@
                         </tr>
                     </table>
                     <!--股票指數-->
-                    <table class="playBoard tType6_index stock">
+                    <table class="playBoard tType6_index stock index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="6">股票指數-美國道瓊工業平均指數</th>
@@ -2055,7 +2055,7 @@
                         </tr>
                     </table>
                     <!--彩球Bingo-->
-                    <table class="playBoard tType7_bingo_index lotto">
+                    <table class="playBoard tType7_bingo_index lotto index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="16">彩球-Bingo Bingo 賓果賓果</th>
@@ -2127,7 +2127,7 @@
                         </tr>
                     </table>
                     <!--彩球大樂透-->
-                    <table class="playBoard tType7_lottery_index lotto">
+                    <table class="playBoard tType7_lottery_index lotto index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="10">彩球-大樂透</th>
@@ -2179,7 +2179,7 @@
                         </tr>
                     </table>
                     <!--冰球-->
-                    <table class="playBoard tType3_index iceball">
+                    <table class="playBoard tType3_index iceball index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="11">冰球-美國-AHL美國冰球聯盟</th>
@@ -2338,7 +2338,7 @@
                         </tr>
                     </table>
                     <!--網球-->
-                    <table class="playBoard tType8_index tennis">
+                    <table class="playBoard tType8_index tennis index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="13">網球-ITF-M15安塔利亞</th>
@@ -2525,7 +2525,7 @@
                         </tr>
                     </table>
                     <!--撞球-->
-                    <table class="playBoard tType9_index snooker">
+                    <table class="playBoard tType9_index snooker index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="6">斯諾克-珊瑚巡迴錦標賽</th>
@@ -2619,7 +2619,7 @@
                         </tr>
                     </table>
                     <!--排球-->
-                    <table class="playBoard tType10_index vball">
+                    <table class="playBoard tType10_index vball index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="14">排球-美國-NCAA大學女子排球賽</th>
@@ -2819,7 +2819,7 @@
                         </tr>
                     </table>
                     <!--賽車-->
-                    <table class="playBoard tType11_index racecar">
+                    <table class="playBoard tType11_index racecar index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="11">賽車-義大利莫拉大獎賽</th>
@@ -2935,7 +2935,7 @@
                         </tr>
                     </table>
                     <!--羽毛球-->
-                    <table class="playBoard tType12_index badminton">
+                    <table class="playBoard tType12_index badminton index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="12">羽毛球-奧爾良大師賽-女子單打</th>
@@ -3109,7 +3109,7 @@
                         </tr>
                     </table>
                     <!--沙灘足球-->
-                    <table class="playBoard tType1_index beachball">
+                    <table class="playBoard tType1_index beachball index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="11">沙灘足球</th>
@@ -3215,7 +3215,7 @@
                         </tr>
                     </table>
                     <!--美式足球-->
-                    <table class="playBoard tType3_index football">
+                    <table class="playBoard tType3_index football index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="11">美式足球-美國-NFL職業美式足球</th>
@@ -3374,7 +3374,7 @@
                         </tr>
                     </table>
                     <!--乒乓球-->
-                    <table class="playBoard tType10_index tableball">
+                    <table class="playBoard tType10_index tableball index_page">
                         <!--標題-->
                         <tr>
                             <th class="tLeft" colspan="14">乒乓球-塞特卡盃-男子單打</th>
