--- a/html/balls/stock.html
+++ b/html/balls/stock.html
@@ -348,7 +348,7 @@
                         </a>
                         <div class="smallList active">滾球盤<span>4</span></div>
                         <div class="smallList">讓分大小<span>520</span></div>
-                        <div class="smallList">混合過關<span>40</span></div>
+                        <div class="smallList mix">混合過關<span>40</span></div>
                         <div class="smallList">上半場<span>18</span></div>
                         <div class="smallList">波膽<span>155</span></div>
                         <div class="smallList">比賽結果</div>
