--- a/html/balls/basketball.html
+++ b/html/balls/basketball.html
@@ -324,7 +324,7 @@
                         </a>
                         <div class="smallList active">滾球盤<span>4</span></div>
                         <div class="smallList">讓分大小<span>520</span></div>
-                        <div class="smallList">混合過關<span>40</span></div>
+                        <div class="smallList mix">混合過關<span>40</span></div>
                         <div class="smallList">上半場<span>18</span></div>
                         <div class="smallList">波膽<span>155</span></div>
                         <div class="smallList">比賽結果</div>
@@ -2068,7 +2068,7 @@
                 </div>
             </div>
             <!--串關投注-->
-            <div class="bettingbar display">
+            <div class="bettingbar">
                 <!--總投注額-->
                 <span class="num">4</span>
                 <div class="openBtn">
