--- a/html/myself/deal_record.html
+++ b/html/myself/deal_record.html
@@ -8,7 +8,7 @@
     <title>交易紀錄</title>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="../../js/javascript.js"></script>
-    <link class="elseStyle" rel="stylesheet" href="../../css_4/style.css">
+    <link class="elseStyle" rel="stylesheet" href="../../css_5/style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 </head>
 
@@ -215,6 +215,7 @@
                 </script>
             </span>
             <div class="threeCircle">
+                <button></button>
                 <button></button>
                 <button></button>
                 <button></button>
