--- a/html/balls/soccer.html
+++ b/html/balls/soccer.html
@@ -1801,7 +1801,7 @@
                         <table class="bettingBoard">
                             <tr>
                                 <td>2021/03/03 14:30:08</td>
-                                <td>下注成功</td>
+                                <td class="sus">下注成功</td>
                             </tr>
                             <tr>
                                 <td>M58755837</td>
