--- a/html/myself/betting_now.html
+++ b/html/myself/betting_now.html
@@ -647,7 +647,7 @@
                 <!--懸浮假bar-->
                 <div class="fixbar">
                     <ul>
-                        <li class="active">即時注單</li>
+                        <li class="only">更新時間為每分鐘一次</li>
                     </ul>
                 </div>
             </div>
