--- a/html/myself/deal_record.html
+++ b/html/myself/deal_record.html
@@ -388,7 +388,7 @@
                 </ul>
             </section>
             <!--交易紀錄-->
-            <section class="myself">
+            <section class="myself recordBG">
                 <div class="mineMainBox record">
                     <!--明細總覽_存款-->
                     <table class="minetable dealRecord deposit display">
