--- a/html/myself/joinus.html
+++ b/html/myself/joinus.html
@@ -529,11 +529,7 @@
                 <!--中段字-->
                 <div class="midword"></div>
                 <!--懸浮假bar-->
-                <div class="fixbar">
-                    <ul>
-                        <li class="active">加入我們</li>
-                    </ul>
-                </div>
+                <div class="fixbar"></div>
             </div>
             <!--隱藏版-->
             <div class="mineHideBoard"></div>
