--- a/html/myself/app.html
+++ b/html/myself/app.html
@@ -444,11 +444,7 @@
                 <!--中段字-->
                 <div class="midword"></div>
                 <!--懸浮假bar-->
-                <div class="fixbar">
-                    <ul>
-                        <li class="active">下載APP</li>
-                    </ul>
-                </div>
+                <div class="fixbar"></div>
             </div>
             <!--隱藏版-->
             <div class="mineHideBoard"></div>
