--- a/html/leftbtn/withdrawl.html
+++ b/html/leftbtn/withdrawl.html
@@ -311,7 +311,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
-                <button></button>
+                <button class="active"></button>
             </div>
             <div class="marqueeBox">
                 <i class="fas fa-volume-up"></i>
