--- a/html/balls/beachball.html
+++ b/html/balls/beachball.html
@@ -219,7 +219,7 @@
                 <button></button>
                 <button></button>
                 <button></button>
-                <button></button>
+                <button class="active"></button>
             </div>
             <div class="marqueeBox">
                 <i class="fas fa-volume-up"></i>
