--- a/html/balls/soccer.html
+++ b/html/balls/soccer.html
@@ -673,6 +673,79 @@
                                 <a href="javascript:;" class="tbimg3 innerBtn">+99></a>
                             </td>
                         </tr>
+                        <tr class="liveBoard">
+                            <td class="box" colspan="100">
+                                <table class="scoreBoard soccer">
+                                    <tr>
+                                        <th class="tLeft">主客隊</th>
+                                        <th>犯規數</th>
+                                        <th>全場</th>
+                                        <th>犯規數</th>
+                                        <th>半場</th>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="mainTeam">主</span>
+                                                烏法足球俱樂部青年
+                                            </p>
+                                        </td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                    </tr>
+                                    <tr>
+                                        <td class="tLeft">
+                                            <p>
+                                                <span class="customTeam">客</span>
+                                                斯特羅吉諾足球俱樂部青年
+                                            </p>
+                                        </td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                        <td>
+                                            <p class="redCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                            <p class="yellowCard">
+                                                <span></span>
+                                                0
+                                            </p>
+                                        </td>
+                                        <td>0</td>
+                                    </tr>
+                                </table>
+                            </td>
+                        </tr>
                         <!--第二行-->
                         <tr>
                             <td class="tLeft">
